--- a/package.json
+++ b/package.json
@@ -9,9 +9,38 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-sdk/client-bedrock-runtime": "^3.988.0",
+    "@base-ui/react": "^1.1.0",
+    "@clerk/nextjs": "^6.37.3",
+    "@google/genai": "^1.41.0",
+    "@hookform/resolvers": "^5.2.2",
+    "@langchain/aws": "^1.2.3",
+    "@langchain/community": "^1.1.15",
+    "@langchain/openai": "^1.2.7",
+    "@openrouter/sdk": "^0.8.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "convex": "^1.31.7",
+    "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
+    "input-otp": "^1.4.2",
+    "langchain": "^1.2.23",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-day-picker": "^9.13.2",
+    "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
+    "react-resizable-panels": "^4.6.2",
+    "recharts": "^2.15.4",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "tesseract.js": "^7.0.0",
+    "vaul": "^1.1.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -20,7 +49,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "shadcn": "^3.8.4",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
