--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "@langchain/community": "^1.1.15",
     "@langchain/openai": "^1.2.7",
     "@openrouter/sdk": "^0.8.0",
+    "@types/file-saver": "^2.0.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "convex": "^1.31.7",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "file-saver": "^2.0.5",
     "input-otp": "^1.4.2",
+    "jspdf": "^4.1.0",
+    "jspdf-autotable": "^5.0.7",
     "langchain": "^1.2.23",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
@@ -41,6 +45,7 @@
     "tailwind-merge": "^3.4.0",
     "tesseract.js": "^7.0.0",
     "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
